updated z-index on game solved pop-up

--- a/src/App.css
+++ b/src/App.css
@@ -176,7 +176,8 @@ small {
 .pop-up-solved {
   position: absolute;
   width: 40vw; 
-  height: 300px;  
+  height: 300px;
+  z-index: 9999;  
 }
 
 .btn-play-again {
